@@ -1,3 +1,8 @@
+(17/04/15)
+==========
+
+· Updated SDL2, Spectrum emulator
+
 (05/04/15)
 ==========
 
